@@ -130,6 +130,7 @@
 		      <property name="reorderable">False</property>
 		      <property name="enable_search">False</property>
 		      <signal name="focus_in_event" handler="on_focus" last_modification_time="Thu, 08 Apr 2004 21:13:21 GMT"/>
+		      <signal name="button_press_event" handler="on_library_button_press_event" last_modification_time="Thu, 17 Feb 2005 10:13:21 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
